--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
+    android:orientation="vertical"
     tools:context="com.sergeyfitis.recyclerviewdemo.MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
         <Button
-            android:id="@+id/btnShuffle"
-            android:layout_width="0dp"
+            android:id="@+id/btnAnimations"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Shuffle"
-            android:layout_weight="1"/>
-        <Button
-            android:id="@+id/btnInsert"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Insert One"
-            android:layout_weight="1"/>
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Delete One"
-            android:layout_weight="1"/>
+            android:text="@string/btn_easy_animations"/>
 
+        <Button
+            android:id="@+id/btnLayoutPerformance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/btn_layout_performance"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/easy_viewtype"/>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvColors"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        tools:listitem="@layout/color_item_layout"/>
-
-</LinearLayout>
+</FrameLayout>
