--- a/app/src/main/res/layout/activity_view_types.xml
+++ b/app/src/main/res/layout/activity_view_types.xml
@@ -29,6 +29,7 @@
         android:layout_height="match_parent"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:overScrollMode="never"
         android:clipToPadding="false"/>
 
 </LinearLayout>
