--- a/app/src/main/res/layout/header_item_layout.xml
+++ b/app/src/main/res/layout/header_item_layout.xml
@@ -8,5 +8,9 @@
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="8dp"
     tools:text="Header"
+    android:textAllCaps="true"
+    android:fontFamily="sans-serif-medium"
     android:gravity="center_vertical"
+    android:textColor="@android:color/white"
+    android:letterSpacing="0.5"
     tools:background="@color/deep_purple"/>
